# gtest

lecture_src/: 10_테스트전용하위클래스.cpp  10_테스트전용하위클래스2.cpp  10_테스트전용하위클래스3.cpp  10_테스트전용하위클래스4.cpp  11_테스트대역.cpp  11_테스트대역2.cpp  11_테스트대역3.cpp  12_테스트스텁.cpp  13_가짜객체.cpp  14_테스트스파이.cpp  15_모의객체.cpp  16_행위기반검증.cpp  17_리스너.cpp  1_시작.cpp  2_3A.cpp  3_테스트픽스쳐.cpp  3_테스트픽스쳐2.cpp  3_테스트픽스쳐3.cpp  4_GoogleTest기능.cpp  5_스위트픽스쳐.cpp  5_스위트픽스쳐2.cpp  6_전역픽스쳐.cpp  7_비기능테스트.cpp  7_비기능테스트2.cpp  8_메모리테스트.cpp  9_파라미터화테스트.cpp  9_파라미터화테스트2.cpp  DLogTarget.h  User.h  test_detail.xml
other_refsrc/gtestSample/: Makefile  README.md  sample3_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc
other_refsrc/ioctl_mock/: README.md  gtest_TVDEVTC-0.cpp  mock_ioctl.cpp  mock_ioctl.h
other_refsrc/test1/: CMakeLists.txt  README.md
other_refsrc/test1/src/: main.cc  sum.cc
other_refsrc/test1/test/: CMakeLists.txt
other_refsrc/test1/test/src/: gtest_sum.cpp
other_refsrc/test2/: CMakeLists.txt  README.md
other_refsrc/test2/src/: helloworld.c  network.c  network.h
other_refsrc/test2/test/: CMakeLists.txt
other_refsrc/test2/test/mock/: mock_socket.h
other_refsrc/test2/test/src/: gtest_network.cpp
other_refsrc/test3/: CMakeLists.txt  README.md
other_refsrc/test3/src/: painter.h  turtle.h
other_refsrc/test3/test/: CMakeLists.txt
other_refsrc/test3/test/src/: gtest_mock.cpp  mock_turtle.h
